# humanai-detect

./: .env.example  .gitignore  2209_A_arastirma_onerisi_formu_FINAL.docx  Notlarım.txt  README.md  pyproject.toml
arayuz/: build_artifacts.py  inference.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
configs/: data_sources.yaml  embeddings.yaml  features.yaml  fusion.yaml  hpo_eval.yaml  models.yaml  paths.yaml  preprocessing.yaml  prompts.txt
notebooks/: colab_build_features_anthropic_topup.ipynb  colab_build_features_topup.ipynb  colab_data_collection.ipynb  colab_generator_balanced.ipynb  colab_humanize_ai_raw_topup.ipynb  colab_humanize_human_topup.ipynb  colab_logo_cv.ipynb  colab_measure_calibration.ipynb  colab_preprocess.ipynb  colab_preprocess_ai_raw_anthropic_topup.ipynb  colab_preprocess_ai_raw_openai_short_topup.ipynb  colab_preprocess_ai_raw_topup.ipynb  colab_preprocess_human_topup.ipynb  colab_shap_by_generator.ipynb  colab_short_pilot.ipynb
scripts/: analyze_human_quality.py  augment_features.py  build_features.py  collect_ai_raw_openai_short.py  collect_ai_raw_topup.py  collect_data.py  collect_dergipark.py  collect_short_pilot.py  download_corpus.py  evaluate.py  evaluate_holdout.py  evaluate_short_pilot.py  explain.py  explain_by_generator.py  export_secondary.py  filter_cjk_contamination.py  filter_human_language.py  humanize_ai_raw_topup.py  humanize_human_topup.py  humanize_qwen_main_gpt.py  humanize_short_openai.py  logo_cv.py  make_holdout_split.py  make_shap_subsample.py  measure_calibration.py  preprocess.py  (+6 more)
(+74 files in other folders)
